...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                        <state key="normal" title="Start"/>
                                        <connections>
                                            <segue destination="ndt-Kl-qBU" kind="show" id="hqn-2m-LhP"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                        <state key="normal" title="Personal Info"/>
                                        <connections>
                                            <segue destination="CIO-jH-7Q8" kind="show" identifier="personInfo" id="uOS-Nr-Hen"/>
...
                                        <color key="backgroundColor" red="1" green="0.46666666666666667" blue="0.46666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <state key="normal" title="Add Hotspot"/>
                                        <connections>
                                            <segue destination="ahN-ZB-9zy" kind="show" identifier="addHotspot" id="Z9t-Hs-Zdg"/>
...
                                        <color key="backgroundColor" red="1" green="0.46666666666666667" blue="0.46666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <state key="normal" title="Edit Hotspot"/>
                                        <connections>
                                            <action selector="mainEditTapped:" destination="ndt-Kl-qBU" eventType="touchUpInside" id="l2V-lr-Nbu"/>
...
                                                    <rect key="frame" x="139" y="58" width="70" height="70"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <state key="normal" title="Button" image="gear"/>
                                                </button>
                                            </subviews>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                <state key="normal" title="Done"/>
                                                <connections>
                                                    <action selector="donePressed:" destination="CIO-jH-7Q8" eventType="touchUpInside" id="P4B-aL-cet"/>
...
                                                </connections>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   About You" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8e8-ax-Cbx" userLabel="Description">
                                                <rect key="frame" x="0.0" y="0.0" width="375" height="31"/>
                                                <color key="backgroundColor" red="1" green="0.46666666670000001" blue="0.46666666670000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <color key="backgroundColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                <state key="normal" title="Delete"/>
                                                <connections>
                                                    <action selector="deleteButtonIsTapped:" destination="ahN-ZB-9zy" eventType="touchUpInside" id="wfG-zj-jdk"/>
...
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click edit and select your 'Home' tile to add information and photos" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMask
                                        <rect key="frame" x="35" y="790" width="307" height="93"/>
                                        <constraints>
...
