...
        // If editing -> "Delete" title then we need to show warnings
        if(deleteButton.title(for: UIControlState.normal) == "Cancel") {
            _ = self.navigationController?.popViewController(animated: true)
        }
        else {
            // Create the alert
            let alert = UIAlertController(title: "Deleting Hotspot", message: "Are you sure you want to delete this Hotspot?", preferredStyle: .alert)
            
            // Create the actions
            let deleteAction = UIAlertAction(title: "Delete", style: .destructive) {
                (action:UIAlertAction) in
                print ("pressed Delete")
                
...
        tableView.delegate = self
        
        // For search bar button
        changedAddress = false
        self.searchCompleter.delegate = self
        self.searchBar.delegate = self
        self.searchBar.placeholder = "Search the location"
        self.searchBar.returnKeyType = UIReturnKeyType.done
        self.searchBar.searchBarStyle = .minimal
        
        // Hide the warning message by default
        dialogCheck.isHidden = true
 
...
            deleteButton.setTitle("Cancel", for: UIControlState.normal)
            
            // Add placeholder text for text view
            // https://stackoverflow.com/questions/27652227/text-view-placeholder-swift
            descriptionTextView.delegate = self
            descriptionPlaceholder = UILabel()
            descriptionPlaceholder.text = "Record your memories here in detail"
            descriptionPlaceholder.sizeToFit()
            descriptionTextView.addSubview(descriptionPlaceholder)
            descriptionPlaceholder.frame.origin = CGPoint(x: 5, y: (descriptionTextView.font?.pointSize)! / 2)
            descriptionPlaceholder.textColor = UIColor.lightGray
            descriptionPlaceholder.isHidden = !descriptionTextView.text.isEmpty
            
...
