...
        let imageData = addedImages[indexPath.row].value(forKey: "photo")
        if(imageData != nil){
            let image = UIImage(data: imageData as! Data)
            photoOnlyCell.image.image = image
        }
        else {
            photoOnlyCell.image.image = (UIImage(named: "defaultPhoto"))
        }
        
        return photoOnlyCell
    }
    
}
...
